yamls/redis-deployment.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  namespace: yt-watcher
  labels:
    app: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis

          image: redis:7-alpine

          args:
            - redis-server
            - --save
            - "60"
            - "1"
            - --loglevel
            - warning

          ports:
            - containerPort: 6379

          volumeMounts:
            - name: redis-storage
              mountPath: /data

          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: yt-watcher

spec:
  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379

  type: ClusterIP
